fixed sponsors container on smaller devices :

--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,7 @@ footer a { color: hsl(228, 45%, 44%); }
 
 @media screen and (min-width: 1560px){
   h1 {
-    font-size: 5.8rem;
+    width: 550px;
   }
   p {
     margin-top: 3rem;
@@ -304,6 +304,24 @@ footer a { color: hsl(228, 45%, 44%); }
   }
 }
 
-@media screen {
-  
+@media screen and (max-width: 1000px) {
+  .sponsors img {
+    width: 80px;
+    height: 27px;
+  }
+
+  .sponsors :nth-child(2) {
+    height: 42px;
+    width: 49px;
+  } 
+}
+
+@media screen and (max-width: 975px){
+  h1 {
+    width: 400px;
+  }
+
+  .info {
+    width: 40%;
+  }
 }
